[gd_scene load_steps=6 format=3 uid="uid://c6agv77fdwyp0"]

[ext_resource type="Script" path="res://scene/difficulty_select/difficulty_select.gd" id="1_10o32"]
[ext_resource type="PackedScene" uid="uid://c4crw1xwvc5ki" path="res://component/sound_button/sound_button.tscn" id="1_q6hjr"]
[ext_resource type="Resource" uid="uid://fl3xdswcoino" path="res://resource/difficulties/easy_difficulty.tres" id="2_chcyr"]
[ext_resource type="Resource" uid="uid://cey41o5qkl8uw" path="res://resource/difficulties/medium_difficulty.tres" id="3_x60vn"]
[ext_resource type="Resource" uid="uid://rlsk11tt3kyr" path="res://resource/difficulties/hard_difficulty.tres" id="4_oixk8"]

[node name="DifficultySelect" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_10o32")
main_scene_path = "res://scene/main/main.tscn"
back_scene_path = "res://scene/title/title.tscn"
tutorial_scene_path = "res://scene/tutorial/tutorial.tscn"
easy_difficulty = ExtResource("2_chcyr")
medium_difficulty = ExtResource("3_x60vn")
hard_difficulty = ExtResource("4_oixk8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 4

[node name="TutorialButton" parent="VBoxContainer/MarginContainer" instance=ExtResource("1_q6hjr")]
layout_mode = 2
text = "Tutorial
"

[node name="TutorialLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Learn how to play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 4

[node name="EasyButton" parent="VBoxContainer/MarginContainer2" instance=ExtResource("1_q6hjr")]
layout_mode = 2
text = "Easy"

[node name="EasyButtonLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "harmonics, lenient margin for error"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="MediumButton" parent="VBoxContainer/MarginContainer3" instance=ExtResource("1_q6hjr")]
layout_mode = 2
text = "Medium"

[node name="MediumButtonLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "harmonics, less margin for error"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="HardButton" parent="VBoxContainer/MarginContainer4" instance=ExtResource("1_q6hjr")]
layout_mode = 2
text = "Hard"

[node name="HardButtonLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "harmonics, least margin for error"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" parent="." instance=ExtResource("1_q6hjr")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"

[connection signal="pressed" from="VBoxContainer/MarginContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer4/HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
